Add index.html as entry page for GitHub Pages

--- a/AdminPage.html
+++ b/AdminPage.html
@@ -439,7 +439,7 @@
 
         function mockSignOut() {
             if (confirm("Are you sure you want to sign out?")) {
-                window.location.href = 'LoginPage.html'; 
+                window.location.href = 'index.html'; 
             }
         }
 
