--- a/RegistrationPage.html
+++ b/RegistrationPage.html
@@ -107,7 +107,7 @@
 
         <div class="mt-6 text-center text-sm text-gray-600">
             Already have an account? 
-            <a href="LoginPage.html" class="font-semibold text-nakngaji-primary hover:underline">Sign In Here</a>
+            <a href="index.html" class="font-semibold text-nakngaji-primary hover:underline">Sign In Here</a>
         </div>
         
         <!-- Mock Alert Box -->
@@ -139,7 +139,7 @@
             mockAlert("Registration successful! Redirecting to login...");
             // In a real app, this would submit data and then redirect.
             setTimeout(() => {
-                 window.location.href = 'LoginPage.html';
+                 window.location.href = 'index.html';
             }, 1000);
         });
     </script>
