--- a/ParentStudentPage.html
+++ b/ParentStudentPage.html
@@ -592,7 +592,7 @@
             if (confirm("Are you sure you want to sign out?")) {
                 alert("Signing out... Redirecting to Login Page.");
                 // In a real application, this would clear session and redirect.
-                window.location.href = 'LoginPage.html'; 
+                window.location.href = 'index.html'; 
             }
         }
 
