--- a/TutorPage.html
+++ b/TutorPage.html
@@ -407,7 +407,7 @@
             if (confirm("Are you sure you want to sign out?")) {
                 mockAlert("Signing out... Redirecting to Login Page.");
                 // Redirect to the login page
-                window.location.href = 'LoginPage.html'; 
+                window.location.href = 'index.html'; 
             }
         }
 
