--- a/ParentStudentPage.html
+++ b/ParentStudentPage.html
@@ -57,21 +57,6 @@
     <header class="bg-white shadow-md sticky top-0 z-10">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
-                <div class="flex items-center gap-3">
-    <!-- Mobile sidebar toggle -->
-    <button
-        class="lg:hidden p-2 rounded-md text-gray-700 hover:bg-gray-100"
-        onclick="toggleSidebar()"
-    >
-        <i data-lucide="menu" class="w-6 h-6"></i>
-    </button>
-
-    <div class="flex-shrink-0">
-        <span class="text-2xl font-bold text-nakngaji-primary">NakNgaji</span>
-        <span class="text-gray-500 text-sm ml-2">Parent/Student LMS</span>
-    </div>
-</div>
-
                 <!-- Logo/Title -->
                 <div class="flex-shrink-0">
                     <span class="text-2xl font-bold text-nakngaji-primary">NakNgaji</span>
@@ -108,30 +93,7 @@
         <div class="grid grid-cols-1 lg:grid-cols-4 gap-8">
             
             <!-- Sidebar / Menu (Parent Options) -->
-            <aside
-    id="sidebar"
-    class="
-        fixed lg:static
-        inset-y-0 left-0
-        w-72 lg:w-auto
-        transform -translate-x-full lg:translate-x-0
-        transition-transform duration-300 ease-in-out
-        z-40
-        lg:col-span-1
-        p-6
-        bg-white
-        rounded-none lg:rounded-xl
-        shadow-lg
-        h-full lg:h-fit
-    "
->
-<!-- Sidebar overlay (mobile only) -->
-<div
-    id="sidebarOverlay"
-    class="fixed inset-0 bg-black bg-opacity-40 z-30 hidden lg:hidden"
-    onclick="toggleSidebar()"
-></div>
-
+            <aside class="lg:col-span-1 p-6 bg-white rounded-xl shadow-lg h-fit">
                 <h3 class="text-lg font-semibold mb-4 text-gray-800 border-b pb-2">Parent Actions</h3>
                 <nav class="space-y-2">
                     <a href="#" id="nav-home" onclick="showView('HomeView', 'nav-home')" class="nav-link flex items-center p-3 rounded-lg text-gray-700 hover:bg-gray-100 transition duration-150 ease-in-out shadow-sm">
@@ -742,15 +704,6 @@
             lucide.createIcons();
             // Set initial view to "Home Overview"
             showView('HomeView', 'nav-home');
-            // Auto-close sidebar on mobile after navigation
-const sidebar = document.getElementById("sidebar");
-const overlay = document.getElementById("sidebarOverlay");
-
-if (window.innerWidth < 1024 && sidebar && overlay) {
-    sidebar.classList.add("-translate-x-full");
-    overlay.classList.add("hidden");
-}
-
 
             // Set initial state for program selection visually:
             // Manually find the default element and call selectProgram with it.
@@ -759,15 +712,6 @@ if (window.innerWidth < 1024 && sidebar && overlay) {
                 selectProgram(currentBooking.program, currentBooking.amount, defaultElement);
             }
         }
-        function toggleSidebar() {
-    const sidebar = document.getElementById("sidebar");
-    const overlay = document.getElementById("sidebarOverlay");
-
-    sidebar.classList.toggle("-translate-x-full");
-    overlay.classList.toggle("hidden");
-}
-
     </script>
-    
 </body>
 </html>
