adjust footer on parents students page

--- a/ParentStudentPage.html
+++ b/ParentStudentPage.html
@@ -574,8 +574,8 @@
                     </div>
                 </div>
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-6 mt-10">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-sm">
+    <footer class="bg-gray-800 text-white py-6 mt-auto">
+        <div class="max-w-7xl mx-auto text-center text-sm px-4">
             &copy; 2024 NakNgaji Booking System. Developed by 4GL Team.
         </div>
     </footer>
