adjust add child section and adjust footer (again)

--- a/ParentStudentPage.html
+++ b/ParentStudentPage.html
@@ -489,7 +489,7 @@
                 <!-- ---------------------------------------------------------------------------------- -->
                 <!-- 4. MANAGE PROFILE VIEW -->
                 <!-- ---------------------------------------------------------------------------------- -->
-              <div id="ProfileView" class="content-view p-8 bg-white rounded-xl shadow-lg">
+                 <div id="ProfileView" class="content-view p-8 bg-white rounded-xl shadow-lg">
                     <h2 class="text-3xl font-bold text-gray-800 border-b pb-4 mb-8">Manage Profile & Account</h2>
 
                     <div class="space-y-10">
@@ -573,9 +573,14 @@
                         </section>
                     </div>
                 </div>
+
+            </section>
+        </div>
+    </main>
+
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-6 mt-auto">
-        <div class="max-w-7xl mx-auto text-center text-sm px-4">
+    <footer class="bg-gray-800 text-white py-6 mt-10">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-sm">
             &copy; 2024 NakNgaji Booking System. Developed by 4GL Team.
         </div>
     </footer>
