an update to nav page to index page

--- a/ParentStudentPage.html
+++ b/ParentStudentPage.html
@@ -777,7 +777,7 @@
         }
 
         function toggleProfileMenu() { document.getElementById('profile-menu').classList.toggle('hidden'); }
-        function mockSignOut() { if (confirm("Sign out from NakNgaji User Portal?")) window.location.href = 'LoginPage.html'; }
+        function mockSignOut() { if (confirm("Sign out from NakNgaji User Portal?")) window.location.href = 'index.html'; }
         
         function initDashboard() {
             lucide.createIcons();
