--- a/RegistrationPage.html
+++ b/RegistrationPage.html
@@ -161,7 +161,7 @@
         <div class="mt-8 text-center">
             <p class="text-[10px] font-black text-gray-400 uppercase tracking-widest">
                 Already have an account? 
-                <a href="LoginPage.html" class="text-nakngaji-primary hover:underline ml-1">Sign In Instead</a>
+                <a href="index.html" class="text-nakngaji-primary hover:underline ml-1">Sign In Instead</a>
             </p>
         </div>
     </div>
@@ -191,7 +191,7 @@
 
             // Redirect after animation delay
             setTimeout(() => {
-                 window.location.href = 'LoginPage.html';
+                 window.location.href = 'index.html';
             }, 2500);
         });
     </script>
