--- a/AdminPage.html
+++ b/AdminPage.html
@@ -590,7 +590,7 @@
         }
 
         function toggleProfileMenu() { document.getElementById('profile-menu').classList.toggle('hidden'); }
-        function mockSignOut() { if (confirm("System Alert: Sign out of Secure Admin Node?")) window.location.href = 'LoginPage.html'; }
+        function mockSignOut() { if (confirm("System Alert: Sign out of Secure Admin Node?")) window.location.href = 'index.html'; }
 
         function initDashboard() {
             lucide.createIcons();
