--- a/TutorPage.html
+++ b/TutorPage.html
@@ -452,7 +452,7 @@
         
         function mockSignOut() { 
             if (confirm("System Alert: Are you sure you want to sign out from the Staff Portal?")) {
-                window.location.href = 'LoginPage.html'; 
+                window.location.href = 'index.html'; 
             }
         }
 
