time slot adjustment

--- a/ParentStudentPage.html
+++ b/ParentStudentPage.html
@@ -295,75 +295,76 @@
                                 </tr>
                             </thead>
                             <tbody class="divide-y divide-gray-50 bg-white">
+                                <!-- Expanded Slots -->
                                 <tr>
                                     <td class="px-6 py-5 whitespace-nowrap font-black text-gray-800 text-sm italic border-r">9:00 AM</td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Mon, 9 AM, Ustazah Zarith', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Wed, 9 AM, Ustaz Naqib', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Thu, 9 AM, Ustazah Ameen', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                 </tr>
                                 <tr>
                                     <td class="px-6 py-5 whitespace-nowrap font-black text-gray-800 text-sm italic border-r">10:00 AM</td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Mon, 10 AM, Ustaz Naqib', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Wed, 10 AM, Ustazah Zarith', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Fri, 10 AM, Ustaz Naqib', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
                                 </tr>
                                 <tr>
                                     <td class="px-6 py-5 whitespace-nowrap font-black text-gray-800 text-sm italic border-r">11:00 AM</td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Tue, 11 AM, Ustazah Zarith', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Wed, 11 AM, Ustaz Danish', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Fri, 11 AM, Ustaz Naqib', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
                                 </tr>
                                 <tr>
                                     <td class="px-6 py-5 whitespace-nowrap font-black text-gray-800 text-sm italic border-r">2:00 PM</td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Mon, 2 PM, Ustaz Danish', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Wed, 2 PM, Ustazah Ameen', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Fri, 2 PM, Ustazah Zarith', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
                                 </tr>
                                 <tr>
                                     <td class="px-6 py-5 whitespace-nowrap font-black text-gray-800 text-sm italic border-r">3:00 PM</td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Tue, 3 PM, Ustaz Naqib', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Thu, 3 PM, Ustazah Zarith', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                 </tr>
                                 <tr>
                                     <td class="px-6 py-5 whitespace-nowrap font-black text-gray-800 text-sm italic border-r">4:00 PM</td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Mon, 4 PM, Ustazah Ameen', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Wed, 4 PM, Ustaz Danish', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Fri, 4 PM, Ustazah Zarith', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
                                 </tr>
                                 <tr>
                                     <td class="px-6 py-5 whitespace-nowrap font-black text-gray-800 text-sm italic border-r">5:00 PM</td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Tue, 5 PM, Ustazah Zarith', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Wed, 5 PM, Ustaz Naqib', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Fri, 5 PM, Ustazah Ameen', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
                                 </tr>
                                 <tr>
                                     <td class="px-6 py-6 whitespace-nowrap font-black text-gray-800 text-sm italic border-r">8:00 PM</td>
                                     <td class="px-6 py-6 text-center"><button onclick="highlightSlot('Mon, 8:00 PM, Ustaz Naqib', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-4 py-2 rounded-xl shadow-lg font-black uppercase transition transform active:scale-90">Available</button></td>
-                                    <td class="px-6 py-6 text-center"><span class="text-[10px] text-red-400 font-black uppercase italic tracking-tighter opacity-50">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                     <td class="px-6 py-6 text-center"><button onclick="highlightSlot('Wed, 8:00 PM, Ustaz Naqib', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-4 py-2 rounded-xl shadow-lg font-black uppercase transition transform active:scale-90">Available</button></td>
                                     <td class="px-6 py-6 text-center"><button onclick="highlightSlot('Thu, 8:00 PM, Ustazah Ameen', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-4 py-2 rounded-xl shadow-lg font-black uppercase transition transform active:scale-90">Available</button></td>
-                                    <td class="px-6 py-6 text-center"><span class="text-[10px] text-red-400 font-black uppercase italic tracking-tighter opacity-50">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Fri, 9:00 PM, Ustaz Danish', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
                                 </tr>
                                 <tr>
                                     <td class="px-6 py-5 whitespace-nowrap font-black text-gray-800 text-sm italic border-r">9:00 PM</td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Mon, 9:00 PM, Ustaz Danish', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Tue, 9:00 PM, Ustaz Naqib', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
-                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Not Available</span></td>
+                                    <td class="px-6 py-5 text-center"><span class="text-[10px] text-red-500 font-black uppercase tracking-tighter">Booked</span></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Thu, 9:00 PM, Ustazah Zarith', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
                                     <td class="px-6 py-5 text-center"><button onclick="highlightSlot('Fri, 9:00 PM, Ustaz Danish', 150.00, this)" class="btn-slot bg-nakngaji-primary text-white text-[10px] px-3 py-1.5 rounded-xl shadow-md font-black uppercase transition transform active:scale-90">Available</button></td>
                                 </tr>
